implemented auto and manual case update

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -193,6 +193,7 @@
 .icon-annotation:before {
 	content: "\e90e";
 }
+
 .icon-share:before {
 	content: "\e945";
 }
@@ -268,6 +269,11 @@
 .icon-frame-mode:before {
 	content: "\e97b";
 }
+
+.icon-save-manual:before {
+	content: "\e914";
+}
+
 .icon-map-Polygon:before {
 	content: "\e90f";
 	font-size: 4rem;
