--- a/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.html
@@ -5,4 +5,7 @@
 	<button class="save-case" type="button" (click)="showSaveCaseModal()">
 		Save As
 	</button>
+	<div class="save-manual" (click)="manualSave()">
+		<i class="icon-save-manual" ></i>
+	</div>
 </div>
