--- a/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-tools/cases-tools.component.less
@@ -17,3 +17,11 @@ div.buttons-group {
 		width: 93px;
 	}
 }
+
+.save-manual {
+	cursor: pointer;
+	color: white;
+	margin-left: 1.25rem;
+	width: 100px;
+	font-size: 22px;
+}
