--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -28,6 +28,15 @@
 		&::placeholder {
 			color: rgba(255, 255, 255, 0.8);
 		}
+
+		// Overcome Chrome's default autofill yellow background
+		&:-webkit-autofill,
+		&:-webkit-autofill:hover,
+		&:-webkit-autofill:focus,
+		&:-webkit-autofill:active {
+			transition: background-color 5000s ease-in-out 0s;
+			-webkit-text-fill-color: white;
+		}
 	}
 
 	button {
