--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -58,6 +58,7 @@
               },
               "flags": {},
               "mapType": "openLayersMap",
+              "sourceType": "ESRI_4326",
               "id": "defaultImagery1"
             }
           ],
@@ -127,36 +128,6 @@
 		}
     }
   },
-  "imageryConfig": {
-    "geoMapsInitialMapSource": [
-      {
-        "mapType": "openLayersMap",
-        "mapSource": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
-        "mapSourceMetadata": {
-          "key": "AsVccaM44P5n-GYKXaV0oVGdTI665Qx_sMgYBSYRxryH2pLe92iVxUgEtwIt8des",
-          "styles": [
-            "AerialWithLabels"
-          ]
-        }
-      },
-      {
-        "mapType": "cesiumMap",
-        "mapSource": "OSM",
-        "mapSourceMetadata": null
-      },
-      {
-        "mapType": "disabledOpenLayersMap",
-        "mapSource": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
-        "mapSourceMetadata": {
-          "key": "AsVccaM44P5n-GYKXaV0oVGdTI665Qx_sMgYBSYRxryH2pLe92iVxUgEtwIt8des",
-          "styles": [
-            "AerialWithLabels"
-          ]
-        }
-      }
-    ],
-    "maxCachedLayers": 100
-  },
   "mapFacadeConfig": {
     "overlayCoverage": 0.1,
     "sensorTypeShortcuts": {
@@ -172,6 +143,17 @@
 		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
 		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
 	}
+  },
+  "bingMaps": {
+  	"key": "AsVccaM44P5n-GYKXaV0oVGdTI665Qx_sMgYBSYRxryH2pLe92iVxUgEtwIt8des",
+  	"styles": [ "AerialWithLabels" ]
+  },
+  "ESRI4326Config": {
+  	"baseUrl": "https://services.arcgisonline.com/arcgis/rest/services/ESRI_Imagery_World_2D/MapServer/tile/{z}/{y}/{x}",
+  	"projection": "EPSG:4326",
+  	"maxZoom": 16,
+  	"tileSize": 512,
+  	"attributions": "Copyright:© 2013 ESRI, i-cubed, GeoEye"
   },
   "filtersConfig": {
   	"shortFilterListLength": 8,
