--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -58,7 +58,7 @@
               },
               "flags": {},
               "mapType": "openLayersMap",
-              "sourceType": "ESRI_4326",
+              "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
               "id": "defaultImagery1"
             }
           ],
