--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="cases-table-auto-save-col">
-					<ansyn-cases-auto-save [caseId]="entities[id].id"></ansyn-cases-auto-save>
+					<ansyn-cases-auto-save [caseId]="id"></ansyn-cases-auto-save>
 				</div>
 
 				<div class="cases-table-body-col">
