Implemented automatic and manual case save (#1522)
* added cases auto save component to project

* added cases auto save component to project 1

* added new action

* auto save enable and disable implemented

* implemented auto and manual case update

* updated tests

* updated tests 1

* removed console log

* after CR

* fixed tests

* after CR 2

* changed currentCase from private to public

--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
@@ -108,6 +108,9 @@ div.cases-table {
 				left: 0;
 				color: #ebf8fa;
 			}
+			/deep/ .slider-text {
+				color: inherit;
+			}
 			div.cases-table-body-row-data {
 				position: relative;
 				display: flex;
@@ -130,6 +133,13 @@ div.cases-table {
 				}
 				div.cases-table-body-col {
 					flex: 1;
+				}
+				div.cases-table-case-name-col {
+					flex: 1.5
+				}
+				div.cases-table-auto-save-col {
+					padding-top: 20px;
+					flex: 2;
 				}
 				div.case-menu-container {
 					flex: 0;
