--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -8,6 +8,9 @@
 					Name
 				</div>
 				<div class="cases-table-head-col">
+					Saving Mode
+				</div>
+				<div class="cases-table-head-col">
 					Owner
 				</div>
 				<div class="cases-table-head-col">
@@ -35,8 +38,12 @@
 			<div class="cases-table-body-row-data">
 				<hr>
 
-				<div class="cases-table-body-col">
+				<div class="cases-table-case-name-col">
 					{{entities[id].name}}
+				</div>
+
+				<div class="cases-table-auto-save-col">
+					<ansyn-cases-auto-save [caseId]="id"></ansyn-cases-auto-save>
 				</div>
 
 				<div class="cases-table-body-col">
