--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -9,7 +9,7 @@ div.menu-wrapper {
 	display: flex;
 	position: relative;
 
-	.menu:not(.expanded), .menu-container {
+	.menu:not(.expanded), .container {
 		box-shadow: 0 0 10px black;
 	}
 
@@ -66,7 +66,7 @@ div.menu-wrapper {
 			}
 		}
 	}
-	div.menu-container {
+	div.container {
 		position: absolute;
 
 		left: 90px;
