First help page

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -5,11 +5,11 @@
 			<div class="second-title">Geo filter</div>
 			<div class="above-center">
 				<div>Right click your AOI</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div><img src="assets/icons/help/Frame 86.svg"></div>
 			</div>
 			<div class="from-center">
 				<div>Press the central button</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div><img src="assets/icons/help/Frame 87.svg"></div>
 				<div>Now the app will recalculate the
 				data for this location</div>
 			</div>
