--- a/src/app/@ansyn/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/menu-items/help/components/help.component.less
@@ -22,13 +22,13 @@
 		font-size: 22px;
 		width: 100%;
 		text-align: center;
-		margin-top: 2rem;
+		margin-top: 1.5rem;
 	}
 
 	.above-center {
 		width: 100%;
 		text-align: center;
-		margin-top: 2rem;
+		margin-top: 1.5rem;
 
 		& > div:not(:first-child) {
 			margin-top: 1rem;
@@ -38,9 +38,9 @@
 	.from-center {
 		position: absolute;
 		top: 50%;
-		left: 15%;
+		left: 0;
 		transform: translateY(-0.5em);
-		width: 70%;
+		width: 100%;
 		text-align: center;
 
 		& > div:not(:first-child) {
