Second help slide

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -21,16 +21,14 @@
 			<div class="second-title">Time Filter</div>
 			<div class="above-center">
 				<div>Set the time of interest</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div><img src="assets/icons/help/Frame 88.svg"></div>
 			</div>
 			<div class="from-center">
-				<div>Double click the buttons to
+				<div>Double click the pink circles to
 				open overlays</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div><img src="assets/icons/help/Frame 89.svg"></div>
 				<div>Navigate between overlays by
 				using the arrows and the keyboard</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
-				<div><img src="assets/icons/map/compass.svg"></div>
 			</div>
 		</div>
 	</slide>
