--- a/src/app/@ansyn/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/menu-items/help/components/help.component.less
@@ -38,9 +38,9 @@
 	.from-center {
 		position: absolute;
 		top: 50%;
-		left: 0;
+		left: 5%;
 		transform: translateY(-0.5em);
-		width: 100%;
+		width: 90%;
 		text-align: center;
 
 		& > div:not(:first-child) {
