Third help slide

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -38,14 +38,13 @@
 			<div class="second-title">Data Filter</div>
 			<div class="above-center">
 				<div>Select the input data</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div><img src="assets/icons/help/Frame 90.svg"></div>
 			</div>
 			<div class="from-center">
-				<div>Filter the available data</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
-				<div>After selecting and filtering the
-					data, the app will recalculate
-					and inform the number of available overlays</div>
+				<div>Accurate the query by using the filters</div>
+				<div><img src="assets/icons/help/Frame 91.svg"></div>
+				<div>See the number of available overlays in the
+				filters menu and in the status bar</div>
 			</div>
 		</div>
 	</slide>
