--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -50,16 +50,17 @@
 	</slide>
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">Additional features:</div>
-			<div class="second-title">App's layout</div>
+			<div class="first-title">How to start exploring?</div>
+			<div class="second-title">Tool Menu</div>
 			<div class="above-center">
-				<div>Change the number of screens</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div>Use the tools to support your work</div>
+				<div><img src="assets/icons/help/Frame 92.svg"></div>
 			</div>
 			<div class="from-center">
-				<div>Cases</div>
-				<div>Save, edit and share your work</div>
-				<div><img src="assets/icons/map/compass.svg"></div>
+				<div>Your can draw annotations to indicate findings</div>
+				<div><img src="assets/icons/help/Frame 93.svg"></div>
+				<div>You can also use image processing options,
+				make measurements and more</div>
 			</div>
 		</div>
 	</slide>
