Feeding in the up to date help slides

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -4,14 +4,14 @@
 			<div class="first-title">How to start exploring?</div>
 			<div class="second-title">Geo filter</div>
 			<div class="above-center">
-				<div>Right click your AOI</div>
+				<div>Right click your area of interest</div>
 				<div><img src="assets/icons/help/Frame 86.svg"></div>
 			</div>
 			<div class="from-center">
 				<div>Press the central button</div>
 				<div><img src="assets/icons/help/Frame 87.svg"></div>
-				<div>Now the app will recalculate the
-				data for this location</div>
+				<div>Now the app will fetch the
+				overlays for this location</div>
 			</div>
 		</div>
 	</slide>
@@ -61,6 +61,21 @@
 				<div><img src="assets/icons/help/Frame 93.svg"></div>
 				<div>You can also use image processing options,
 				make measurements and more</div>
+			</div>
+		</div>
+	</slide>
+	<slide>
+		<div class="help-slide">
+			<div class="first-title">How to start exploring?</div>
+			<div class="second-title">Context Menu</div>
+			<div class="above-center">
+				<div>Navigate between overlays by right click</div>
+				<div><img src="assets/icons/help/Frame 94.svg"></div>
+			</div>
+			<div class="from-center">
+				<div>See all available options</div>
+				<div><img src="assets/icons/help/Frame 95.svg"></div>
+				<div>Good luck!</div>
 			</div>
 		</div>
 	</slide>
