Style simplified, using flex

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -1,80 +1,85 @@
 <carousel [interval]="0">
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">How to start exploring?</div>
-			<div class="second-title">Geo filter</div>
 			<div class="above-center">
+				<div>How to start exploring?</div>
+				<div>Geo filter</div>
 				<div>Right click your area of interest</div>
-				<div><img src="assets/icons/help/Frame 86.svg"></div>
+				<img src="assets/icons/help/Frame 86.svg">
 			</div>
 			<div class="from-center">
 				<div>Press the central button</div>
-				<div><img src="assets/icons/help/Frame 87.svg"></div>
+				<img src="assets/icons/help/Frame 87.svg">
 				<div>Now the app will fetch the
-				overlays for this location</div>
+					overlays for this location
+				</div>
 			</div>
 		</div>
 	</slide>
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">How to start exploring?</div>
-			<div class="second-title">Time Filter</div>
 			<div class="above-center">
+				<div>How to start exploring?</div>
+				<div>Time Filter</div>
 				<div>Set the time of interest</div>
-				<div><img src="assets/icons/help/Frame 88.svg"></div>
+				<img src="assets/icons/help/Frame 88.svg">
 			</div>
 			<div class="from-center">
 				<div>Double click the pink circles to
-				open overlays</div>
-				<div><img src="assets/icons/help/Frame 89.svg"></div>
+					open overlays
+				</div>
+				<img src="assets/icons/help/Frame 89.svg">
 				<div>Navigate between overlays by
-				using the arrows and the keyboard</div>
+					using the arrows and the keyboard
+				</div>
 			</div>
 		</div>
 	</slide>
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">How to start exploring?</div>
-			<div class="second-title">Data Filter</div>
 			<div class="above-center">
+				<div>How to start exploring?</div>
+				<div>Data Filter</div>
 				<div>Select the input data</div>
-				<div><img src="assets/icons/help/Frame 90.svg"></div>
+				<img src="assets/icons/help/Frame 90.svg">
 			</div>
 			<div class="from-center">
 				<div>Accurate the query by using the filters</div>
-				<div><img src="assets/icons/help/Frame 91.svg"></div>
+				<img src="assets/icons/help/Frame 91.svg">
 				<div>See the number of available overlays in the
-				filters menu and in the status bar</div>
+					filters menu and in the status bar
+				</div>
 			</div>
 		</div>
 	</slide>
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">How to start exploring?</div>
-			<div class="second-title">Tool Menu</div>
 			<div class="above-center">
+				<div>How to start exploring?</div>
+				<div>Tool Menu</div>
 				<div>Use the tools to support your work</div>
-				<div><img src="assets/icons/help/Frame 92.svg"></div>
+				<img src="assets/icons/help/Frame 92.svg">
 			</div>
 			<div class="from-center">
 				<div>Your can draw annotations to indicate findings</div>
-				<div><img src="assets/icons/help/Frame 93.svg"></div>
+				<img src="assets/icons/help/Frame 93.svg">
 				<div>You can also use image processing options,
-				make measurements and more</div>
+					make measurements and more
+				</div>
 			</div>
 		</div>
 	</slide>
 	<slide>
 		<div class="help-slide">
-			<div class="first-title">How to start exploring?</div>
-			<div class="second-title">Context Menu</div>
 			<div class="above-center">
+				<div>How to start exploring?</div>
+				<div>Context Menu</div>
 				<div>Navigate between overlays by right click</div>
-				<div><img src="assets/icons/help/Frame 94.svg"></div>
+				<img src="assets/icons/help/Frame 94.svg">
 			</div>
 			<div class="from-center">
 				<div>See all available options</div>
-				<div><img src="assets/icons/help/Frame 95.svg"></div>
+				<img src="assets/icons/help/Frame 95.svg">
 				<div>Good luck!</div>
 			</div>
 		</div>
