Styling: add some responsivity, by reducing the image height in smaller screens

--- a/src/app/@ansyn/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/menu-items/help/components/help.component.less
@@ -44,6 +44,12 @@
 		justify-content: space-between;
 		align-items: center;
 	}
+
+	@media screen and (max-height: 850px) {
+		img {
+			height: 70%;
+		}
+	}
 }
 
 footer {
