1253 add help section (#1545)
* 1 Adding a menu item: Help
2 Adding a stub module for Help
3 Adding a (temporary) css definition, to make the menu bar responsive to smaller screens

* Now the basic carousel works

* Adding a less variable for no. of menu items

* Adding a font icon for Help menu item

* Rename uses of class name "container" to "menu-container", to avoid collision with Bootstrap..

* Carousel slide design (to be cont.)

* Carousel slide design (to be cont.)

* 1 Moving bootstrap carousel .scss defs to a .less file
2 Using that .less file, and removing the reference to bootstrap.css

* Removing bootstrap from node_modules

* Slide styling (cont.)

* Slide styling (cont.)

* Managing show/don't show help on startup

* Managing show/don't show help on startup

* Entering real text from design, and images placeholders

* Better design for carousel indicators, and the bottom horizontal rule

* Adding a unit test with the store

* 1 Fixing imports, to remove a circular dependency
2 Adding a less variable (for footer height)

* Some fixes after the big merge

* tweaks, help image files

* More post-merge fixes

* First help page

* Second help slide

* Third help slide

* 4th help slide

* Feeding in the up to date help slides

* Style simplified, using flex

* Styling: add some responsivity, by reducing the image height in smaller screens

* PR fixes

* PR fixes

* PR fixes, various refactoring

* Updating unit test

--- a/src/app/@ansyn/assets/styles/styles.less
+++ b/src/app/@ansyn/assets/styles/styles.less
@@ -2,6 +2,7 @@
 @import "~flatpickr/dist/flatpickr.css";
 @import "~new-ansyn-event-drops/style.css";
 @import "core/less/z-index-globals";
+@import "bootstrap/carousel";
 @import 'icons';
 @import "~primeng/resources/primeng.min.css";
 @import "~primeng/resources/themes/omega/theme.css";
@@ -212,8 +213,7 @@ input[type=number]::-webkit-outer-spin-button {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-
-.icon-screen-1:before, .icon-screen-2:before , .icon-screen-3:before , .icon-screen-4:before , .icon-screen-5:before , .icon-screen-6:before {
+.icon-screen-1:before, .icon-screen-2:before, .icon-screen-3:before, .icon-screen-4:before, .icon-screen-5:before, .icon-screen-6:before {
 	font-size: 20px;
 	line-height: normal;
 }
