--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.less
@@ -6,7 +6,7 @@ div.container {
 		padding: 5px 0 10px 0;
 
 		span.title {
-			font-family: Open Sans;
+			font-family: "Open Sans", sans-serif;
 			font-style: normal;
 			font-weight: bold;
 			font-size: 14px;
@@ -20,7 +20,7 @@ div.container {
 		}
 
 		span.filtered {
-			font-family: Open Sans;
+			font-family: "Open Sans", sans-serif;
 			font-style: italic;
 			font-weight: normal;
 			font-size: 12px;
