--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -146,6 +146,10 @@
 	content: "\e923";
 }
 
+.icon-help-settings:before {
+	content: "\e90f";
+}
+
 .icon-tools-go-to:before {
 	content: "\e92c";
 }
