--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -2,6 +2,8 @@
 @import 'core/less/z-index-globals';
 @import 'core/less/tooltip';
 
+@number-of-menu-item: 8;
+
 div.menu-wrapper {
 	height: 100%;
 	display: flex;
@@ -31,6 +33,12 @@ div.menu-wrapper {
 			i {
 				display: block;
 				font-size: 3em;
+			}
+
+			@media screen and (max-height: 700px) {
+				i {
+					font-size: calc(~"((100vh - 94px) / @{number-of-menu-item}) - 45px");
+				}
 			}
 
 			span.badge {
