after refactor (removed base-layer-plugin)

--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -2,6 +2,7 @@
 	*ngIf="!hideOverlay"
 	[overlay]="activeMap?.data?.overlay"
 	[active]="true"
+	[layerFlag]="activeMap?.flags.layers"
 	[mapId]="activeMap?.id">
 </ansyn-imagery-status>
 
