Help: new next/prev buttons

--- a/src/app/@ansyn/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/menu-items/help/components/help.component.less
@@ -79,3 +79,11 @@ footer {
 		border-radius: 5px;
 	}
 }
+
+// Replace the next/prev controls
+/deep/ .carousel-control-next-icon {
+	background-image: url(/assets/icons/help/help_next.svg);
+}
+/deep/ .carousel-control-prev-icon {
+	background-image: url(/assets/icons/help/help_prev.svg);
+}
