--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -8,7 +8,7 @@
 					Name
 				</div>
 				<div class="cases-table-head-col">
-					Saving Mode
+					Auto Save
 				</div>
 				<div class="cases-table-head-col">
 					Owner
