--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -5,7 +5,7 @@
 						  [mapId]="mapState.id"
 						  [overlay]="overlay"
 						  [active]="active"
-						  [layerFlag]="mapState.flags.layers"
+						  [layerFlag]="mapState.flags.displayLayers"
 						  [mapsAmount]="mapsAmount"
 						  (toggleMapSynchronization)="toggleMapSynchronization()">
 	</ansyn-imagery-status>
