1 More space for footer 2 Dividing the slide into "header" and "content" divs

--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -1,13 +1,14 @@
 <carousel [interval]="0">
 	<slide *ngFor="let slide of const.SLIDES_DATA">
 		<div class="help-slide">
-			<div class="above-center">
+			<div class="header">
 				<div>How to start exploring?</div>
 				<div>{{slide.text[0]}}</div>
+				<div>&nbsp;</div>
+			</div>
+			<div class="content">
 				<div>{{slide.text[1]}}</div>
 				<img [src]="img(slide.image[0])">
-			</div>
-			<div class="from-center">
 				<div>{{slide.text[2]}}</div>
 				<img [src]="img(slide.image[1])">
 				<div>{{slide.text[3]}}</div>
@@ -16,8 +17,9 @@
 	</slide>
 </carousel>
 
+<hr/>
+
 <footer>
-	<hr/>
 	<label>
 		<ansyn-checkbox
 			text="Don't show on startup"
