remove layers show-all and add marging to only

--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.less
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.less
@@ -90,6 +90,7 @@ div.enum-fields-enumerator {
 				font-style: normal;
 				color: rgba(255, 255, 255, 0.75);
 				cursor: pointer;
+				margin-left: 2px;
 
 				&:hover {
 					text-decoration: underline;
