--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -33,15 +33,6 @@ div.container {
 				opacity: 0.7;
 			}
 		}
-
-		div.show-all {
-			float: right;
-			font-size: 12px;
-			font-style: normal;
-			color: rgba(255, 255, 255, 0.75);
-			margin-right: 7px;
-			cursor: pointer;
-		}
 	}
 
 	div.layers {
@@ -138,6 +129,7 @@ div.container {
 				 font-style: normal;
 				 color: rgba(255, 255, 255, 0.75);
 				 cursor: pointer;
+				 margin-left: 2px;
 
 				 &:hover {
 					 text-decoration: underline;
