feat(annotations-layer): download annotation layers as json

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -277,7 +277,9 @@
 .icon-save-manual:before {
 	content: "\e914";
 }
-
+.icon-download-layer:before {
+	content: "\e918";
+}
 .icon-map-Polygon:before {
 	content: "\e90f";
 	font-size: 4rem;
