--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
@@ -54,3 +54,12 @@ div.title-row {
 		background: white -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
 	}
 }
+
+button.download-layer {
+	background: transparent;
+	border: none;
+	.icon-download-layer {
+		color: white;
+		font-size: 18px;
+	}
+}
