moved auto width of slider-text to slider-checkbox.less

--- a/src/app/@ansyn/core/less/slider-checkbox.less
+++ b/src/app/@ansyn/core/less/slider-checkbox.less
@@ -13,7 +13,7 @@ input:disabled ~ .switch
 	color: white;
 	margin-left: 72px;
 	display: block;
-	width: 10rem;
+	width: auto;
 	margin-top: -3px;
 }
 
