feat: display annotation id (by flag)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -199,6 +199,9 @@
     "schema": "contexts"
   },
   "toolsConfig": {
+	"Annotations": {
+	  "displayId":  "{{ getv "/ansyn/tools/displayid" "0" }}"
+	},
     "GoTo": {
       "from": {
         "datum": "wgs84",
