--- a/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -1,10 +1,8 @@
 <div class="collection">
-	<label class="switch">
-		<input id="show-only-favorites" [checked]="onlyFavorite"  type="checkbox" (click)="showOnlyFavorites($event)"
-		 [disabled]="disableShowOnlyFavoritesSelection"/>
-		<span class="slider round"></span>
-		<span class="slider-text">Show only favorites</span>
-	</label>
+	<ansyn-slider-checkbox [checked]="onlyFavorite"  (checkedChange)="showOnlyFavorites($event)" [disabled]="disableShowOnlyFavoritesSelection">
+		Show only favorites
+	</ansyn-slider-checkbox>
+
 	<div class="allFilters">
 			<ansyn-filter-container
 			*ngFor="let filter of filters"
