--- a/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.html
+++ b/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.html
@@ -6,12 +6,7 @@
 			</ngx-treeview>
 		</div>
 		<div class="data-input-filters-buttons">
-			<label class="switch">
-				<input id="activate-data-input-filters" [checked]="dataInputFiltersActive" type="checkbox"
-					   (click)="activateDataInputFilters($event)"/>
-				<span class="slider round"></span>
-				<span class="slider-text">&nbsp;</span>
-			</label>
+			<ansyn-slider-checkbox [checked]="dataInputFiltersActive" (checkedChange)="activateDataInputFilters($event)"></ansyn-slider-checkbox>
 			<div>
 				<a (click)="onTreeViewClose()">Cancel</a>
 				<a class="ok-button" (click)="dataInputFiltersOk()">Ok</a>
