--- a/src/app/@ansyn/overlays/components/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-status/overlay-status.component.html
@@ -1,6 +1,6 @@
-<div class="overlays-status" *ngIf="statusMessage && !loading" [@timeline-status]>
+<div class="overlays-status" *ngIf="statusMessage && !loading" [@timeline-status]  (click)="close()">
 	<div class="text-container">
 		<span>{{statusMessage}}</span>
-		<button class="close" (click)="close()">X</button>
+		<button class="close">X</button>
 	</div>
 </div>
