--- a/src/app/@ansyn/overlays/components/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-status/overlay-status.component.less
@@ -13,6 +13,7 @@
 	background: rgba(red(@overlays-dots-color), green(@overlays-dots-color), blue(@overlays-dots-color), 0.1);
 	color: @menu-color;
 	font-size: 15px;
+	background: rgba(0, 0, 0, 0.38);
 	.text-container {
 		position: relative;
 		top: -10px;
