--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -1,14 +1,14 @@
 <carousel [interval]="0">
 	<slide *ngFor="let slide of const.SLIDES_DATA">
 		<div class="help-slide">
-				<div>How to start exploring?</div>
-				<div>{{slide.text[0]}}</div>
+				<div class="header1">How to start exploring?</div>
+				<div class="header2">{{slide.text[0]}}</div>
 			<div class="content">
-				<div>{{slide.text[1]}}</div>
-				<img [src]="img(slide.image[0])">
-				<div>{{slide.text[2]}}</div>
-				<img [src]="img(slide.image[1])">
-				<div>{{slide.text[3]}}</div>
+				<div class="topText">{{slide.text[1]}}</div>
+				<div class="img-container"><img [src]="img(slide.image[0])"></div>
+				<div class="midText">{{slide.text[2]}}</div>
+				<div class="img-container"><img [src]="img(slide.image[1])"></div>
+				<div class="bottomText">{{slide.text[3]}}</div>
 			</div>
 		</div>
 	</slide>
