--- a/src/app/@ansyn/menu-items/help/components/help.component.html
+++ b/src/app/@ansyn/menu-items/help/components/help.component.html
@@ -4,9 +4,9 @@
 				<div class="header1">How to start exploring?</div>
 				<div class="header2">{{slide.text[0]}}</div>
 			<div class="content">
-				<div class="topText">{{slide.text[1]}}</div>
+				<div class="text topText">{{slide.text[1]}}</div>
 				<div class="img-container"><img [src]="img(slide.image[0])"></div>
-				<div class="midText">{{slide.text[2]}}</div>
+				<div class="text midText">{{slide.text[2]}}</div>
 				<div class="img-container"><img [src]="img(slide.image[1])"></div>
 				<div class="bottomText">{{slide.text[3]}}</div>
 			</div>
